plugins {
    id 'java'
    id 'com.gradleup.shadow' version '9.4.1'
    id 'xyz.jpenilla.run-paper' version '3.0.2'
    id 'de.undercouch.download' version '5.7.0'
}

group = 'com.example'
version = '1.0.0'
description = 'UtilityPlus - spawn, homes, TPA, chat, teams, stats, and admin utilities'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
    maven {
        name = 'papermc-repo'
        url = 'https://repo.papermc.io/repository/maven-public/'
    }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
}

processResources {
    def props = [version: version]
    inputs.properties props
    filteringCharset 'UTF-8'
    filesMatching('plugin.yml') {
        expand props
    }
}

shadowJar {
    archiveClassifier.set('')
    archiveFileName.set("${project.name}-${project.version}.jar")
}

def mcVersion = providers.gradleProperty("minecraftVersion").orElse("1.21.11").get()
def paperRunDir = file("run-paper")
def foliaRunDir = file("run-folia")

// Winds-Studio/Leaf Configuration
def leafVersion = "1.21.11"
def leafBuild = "121"
def leafJarName = "leaf-${leafVersion}-${leafBuild}.jar"
def leafDownloadUrl = "https://api.leafmc.one/v2/projects/leaf/versions/${leafVersion}/builds/${leafBuild}/downloads/${leafJarName}"
def serverDir = file("run")

task downloadLeaf(type: Download) {
    src leafDownloadUrl
    dest new File(buildDir, leafJarName)
    overwrite false
}

task setupServer(dependsOn: [downloadLeaf, shadowJar]) {
    doLast {
        if (!serverDir.exists()) serverDir.mkdirs()
        
        // Copy plugin to run/plugins
        def pluginsDir = new File(serverDir, "plugins")
        if (!pluginsDir.exists()) pluginsDir.mkdirs()o
        
        copy {
            from shadowJar.archiveFile
            into pluginsDir
        }
        
        // Create eula.txt
        def eulaFile = new File(serverDir, "eula.txt")
        if (!eulaFile.exists()) {
            eulaFile.text = "eula=true"
        }
    }
}

task runLeaf(type: JavaExec, dependsOn: setupServer) {
    group = "run paper"
    mainClass = "-jar" 
    args = [
        downloadLeaf.dest.absolutePath,
        "nogui"
    ]
    workingDir = serverDir
    standardInput = System.in
}

// Paper run configuration
runServer {
    minecraftVersion(mcVersion)
    runDirectory(paperRunDir)
}

tasks.register("runPaper") {
    group = "run paper"
    description = "Runs a Paper test server in ./run-paper"
    dependsOn tasks.named("runServer")
}

runPaper {
    folia {
        registerTask {
            minecraftVersion(mcVersion)
            runDirectory(foliaRunDir)
        }
    }
}

build.dependsOn shadowJar
